# ynab-agent

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  philosophy.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  client.py  config.py  formatting.py  history.py  models.py  paths.py
docs/solutions/logic-errors/: cli-missing-rta-assign-and-verbose-budget.md
skills/ynab/: SKILL.md
skills/ynab-categorize/: SKILL.md
skills/ynab-rebalance/: SKILL.md
skills/ynab-setup/: SKILL.md
skills/ynab-status/: SKILL.md
src/ynab_agent/: cli.py  client.py  config.py  formatting.py  history.py  models.py
tests/: test_assignment.py  test_formatting.py  test_history.py  test_models.py
